--- a/emojiStories.css
+++ b/emojiStories.css
@@ -25,12 +25,14 @@ body {
 }
 
 #emojiHistory{
-    width: 99.2%;
-    max-height: 400px;
+    width: 90%;
+    height: 400px;
     margin: auto;
     position: relative;
-    padding: -10px;
+    padding: 10px;
     border-radius: 10px;
+    font-size: 2.4rem;
+    font-size: 24px;
 }
 
 .titles{
@@ -47,18 +49,12 @@ body {
 }
 
 #emojis{
+    width: 90%;
     font-size: 4.4rem;
     font-size: 44px;
     border-radius: 10px;
 }
 
-.form{
-    display: block;
-    font-size: 3.6rem;
-    font-size: 36px;
-    width: 75%;
-    margin: auto;
-}
 
 #emoji-story{
     font-size: 3.2rem;
@@ -66,16 +62,25 @@ body {
     text-align: center;
 }
 
-#story-length-input, #generate-story-btn{
-    width: 25%;
 
-    font-size: 2.0rem;
-    font-size: 20px;
-    
+#description-input, #story-length-input, #generate-story-btn, #submit-description-btn{
+    width: 790px;
+    height: 25%;
+    font-size: 2.4rem;
+    font-size:24px;
+    margin: 15px;
+    text-aligns: center;
+    padding: 15px;
+    display: inline-block;
 }
 
-#description-input{
-    width: 40%;
-    font-size: 2.0rem;
-    font-size: 20px;
+.form{
+    
+    display: block;
+    padding: 20px;
+    border: 10px;
+}
+
+#generate-story-btn, #submit-description-btn{
+    margin-left:15px;
 }
