--- a/emojiStories.css
+++ b/emojiStories.css
@@ -2,9 +2,7 @@ body {
     margin: 20px;
     padding: 15px;
     border: solid black 2px;
-    border-radius: 18px/54px;
-
-    font-size: 62.5%;
+    border-radius: 20px;
 
 }
 
@@ -53,6 +51,7 @@ body {
     font-size: 4.4rem;
     font-size: 44px;
     border-radius: 10px;
+    padding: 10px;
 }
 
 
@@ -64,23 +63,25 @@ body {
 
 
 #description-input, #story-length-input, #generate-story-btn, #submit-description-btn{
-    width: 790px;
+    width: 85%;
     height: 25%;
     font-size: 2.4rem;
     font-size:24px;
     margin: 15px;
-    text-aligns: center;
     padding: 15px;
     display: inline-block;
+    text-align: center;
+
 }
 
 .form{
     
-    display: block;
-    padding: 20px;
-    border: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #generate-story-btn, #submit-description-btn{
     margin-left:15px;
+  
 }
