--- a/emojiStories.css
+++ b/emojiStories.css
@@ -2,7 +2,9 @@ body {
     margin: 20px;
     padding: 15px;
     border: solid black 2px;
-    border-radius: 20px;
+    border-radius: 18px/54px;
+
+    font-size: 62.5%;
 
 }
 
@@ -51,7 +53,6 @@ body {
     font-size: 4.4rem;
     font-size: 44px;
     border-radius: 10px;
-    padding: 10px;
 }
 
 
@@ -63,25 +64,23 @@ body {
 
 
 #description-input, #story-length-input, #generate-story-btn, #submit-description-btn{
-    width: 85%;
+    width: 790px;
     height: 25%;
     font-size: 2.4rem;
     font-size:24px;
     margin: 15px;
+    text-aligns: center;
     padding: 15px;
     display: inline-block;
-    text-align: center;
-
 }
 
 .form{
     
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    padding: 20px;
+    border: 10px;
 }
 
 #generate-story-btn, #submit-description-btn{
     margin-left:15px;
-  
 }
